feat: add launch4j in pom.xml
Add launch4j in pom.xml